refactor: add script and style folder

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <meta name="theme-color" content="#8a2be2" />
     <meta name="coverage" content="Worldwide" />
     <meta name="distribution" content="Global" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="styles/style.css" />
+    <script src="script/index.js" defer></script>
   </head>
   <body>
     <div class="theme-toggle-container">
