refactor: add question file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <meta name="coverage" content="Worldwide" />
     <meta name="distribution" content="Global" />
     <link rel="stylesheet" href="styles/style.css" />
-    <script src="script/index.js" defer></script>
+    <script type="module" src="script/index.js" defer></script>
+    <script type="module" src="script/questions.js" defer></script>
   </head>
   <body>
     <div class="theme-toggle-container">
@@ -32,15 +33,6 @@
     <div class="theme-caption">Dark Mode</div>
   </div>
     <div class="content" id="content">
-      <!-- <h1 class="questionNumber">Question 1/4</h1>
-        <h2 class="question">What is the capital of France?</h2>
-        <div class="answersButtons" id="listAnswers">
-            <button class="btn_answer">New York</button>
-            <button class="btn_answer">New York</button>
-            <button class="btn_answer">New York</button>
-            <button class="btn_answer">New York</button>
-        </div>
-        <div class="btnNextCont"><div class="btn_next"><button id="next">Next</button></div></div> -->
     </div>
   </body>
 </html>
